--- a/test/oreore/Pipfile
+++ b/test/oreore/Pipfile
@@ -6,8 +6,19 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-flask = "*"
-line-bot-sdk = "*"
+certifi = "==2020.6.20"
+chardet = "==3.0.4"
+click = "==7.1.2"
+future = "==0.18.2"
+idna = "==2.10"
+itsdangerous = "==1.1.0"
+line-bot-sdk = "==1.17.0"
+requests = "==2.24.0"
+urllib3 = "==1.25.11"
+Flask = "==1.1.2"
+Jinja2 = "==2.11.2"
+MarkupSafe = "==1.1.1"
+Werkzeug = "==1.0.1"
 
 [requires]
 python_version = "3.8"
