--- a/test/oreore/Pipfile
+++ b/test/oreore/Pipfile
@@ -1,6 +1,6 @@
 [[source]]
-name = "pypi"
-url = "https://pypi.org/simple"
+name = "linebot"
+url = "https://linebot.org/simple"
 verify_ssl = true
 
 [dev-packages]
