--- a/test/oreore/Pipfile
+++ b/test/oreore/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 flask = "*"
 line-bot-sdk = "*"
+flask-sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.8"
